fix(css): replace broken stylesheet with corrected version to restore layout

--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -1,7 +1,5 @@
 @charset "utf-8";
 
-
-
 /*
   New Perspectives on HTML5 and CSS3, 7th Edition
   Tutorial 3
@@ -9,313 +7,138 @@
   
   Layout styles for Slate and Pencil Tutoring
   Author: Steven Scoville
-  Date:   11/15/2025
+  Date:   11/16/2025
   
   Filename: sp_layout.css
+
 */
-
-
 
 /* Window and Body Styles */
 
-
-
 html {
-
 height: 100%;
 
 }
-
 body {
-
   min-height: 100%;
-
   margin-left: auto;
-
   margin-right: auto;
-
   max-width: 960px;
-
   min-width: 640px;
-
   width: 95%; 
-
 }
-
-
 
 header, ul, nav, li, a {
-
   -webkit-box-sizing: border-box;
-
   -moz-box-sizing: border-box;
-
   box-sizing: border-box; 
-
-}
-
-img {
-  display: block;
-}
-
-
-/* Grid Styles */
-
-body {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-}
-
-img#logo {
-  grid-column: 1 / span 3;
-  width: 100%;
-}
-
-nav.horizontal, footer {
-  grid-column: 1 / -1;
-}
-
-aside {
-  grid-column: span 2;
 }
 
 
 /* Row Styles */
 
-
-
 .row::after {
-
   clear: both;
-
   content: "";
-
   display: table;
-
 }
-
-
-
-
 
 
 
 /* Page Header Styles */
 
-
-
 body > header > img {
-
   display: block;
-
   float: left;
-
   width: 70%;
-
 }
-
-
 
 body > header > nav {
-
   float: left;
-
   padding-left: 2%;
-
   padding-right: 2%;  
-
   width: 30%;
-
 }
-
-
 
 body > header > nav a {
-
   display: block;
-
   width: 100%;
-
 }
-
-
-
 
 
 /* Horizontal Navigation List Styles */
 
-
-
 nav.horizontal li {
-
   display: block;
-
   float: left;   
-
   width: 12.5%;  
-
-}
-
-
-/* Section Styles */
-
-section img {
-  width: 50%;
-  margin: 0 auto;
-}
-
-section p {
-  width: 70%;
-  margin: 0 auto;
 }
 
 
 /* Topics Styles */
 
 
-
-
-
 ul#topics li {
-
   display: block;
-
   float: left;
-
   width: 20%;
-
   margin-left: 0%;
-
   margin-right: 1.5%; 
-
 }
-
-
-
 
 
 ul#topics li:first-of-type {
-
   margin-left: 7.75%;
-
 }
-
-
 
 ul#topics li:last-of-type {
-
   margin-right: 7.75%;
-
 }
-
-
 
 ul#topics li img {
-
   display: block;
-
   width: 50%;
-
   margin: 0 auto;
-
 }
-
-
-
 
 
 /* HR Styles */
 
-
-
 hr {
-
   width: 50%;
-
 }
-
-
-
 
 
 /* Customer Comment Styles */
 
-aside {
-  width: 75%;
-  padding-bottom: 30px;
-}
-
-aside:nth-of-type(odd) {
-  justify-self: end;
-}
-
-aside img {
-  float: left;
-  width: 20%;
-}
-
-aside p {
-  float: left;
-  width: 75%;
-  margin-left: 5%;
-}
-
 ul#comments {
-
   width: 75%;
-
   margin: 40px auto;
-
 }
-
-
-
 
 
 ul#comments li {
-
   display: block;
-
   float: left;
-
   margin-bottom: 30px;
-
   width: 50%;
-
 }
-
-
 
 ul#comments li img {
-
   display: block;
-
   float: left;
-
   width: 20%;
-
   margin: 0 5%;
-
 }
-
-
 
 ul#comments li p {
-
   float: left;
-
   width: 70%;
-
 }
-
-
 
 /* Footer Styles */
 
-
-
 footer {
-
   clear: both;
-
 }
+
